testing/framework/resources/Advanced/Failing/mondrian/query6106.q
select count(distinct name1) from product_csv;
